Fix overflow on small screens resulting in scroll

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@ body {
   display: grid;
   grid-template-rows: 1fr;
   background-color: #34383b;
+  overflow: hidden;
 }
 
 .content:before {
